# projet_cloud_virt

./: .env.example  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  setup-vm.sh
api/: Dockerfile  README.md  pyproject.toml
api/image_api/: web.py  worker.py
nomad/: backend.nomad  frontend.nomad  worker.nomad
sujet/: README.md  metadata.yaml
web/: Dockerfile  README.md  package-lock.json  package.json
web/public/: config.json
web/src/components/: DropZone.tsx  File.tsx
