[project]
authors = [{ name = "Quentin Gliech", email = "gliech@unistra.fr" }]
requires-python = "<4.0,>=3.10"
dependencies = [
    "Flask<4.0.0,>=3.1.3",
    "boto3<2.0.0,>=1.42.58",
    "Flask-Cors<6.0.0,>=5.0.1",
    "Pillow<13.0.0,>=12.1.1",
    "celery[librabbitmq,redis]<6.0.0,>=5.6.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-instrumentation==0.60b1",
    "opentelemetry-instrumentation-system-metrics==0.60b1",
    "opentelemetry-instrumentation-logging==0.60b1",
    "opentelemetry-instrumentation-urllib==0.60b1",
    "opentelemetry-instrumentation-wsgi==0.60b1",
    "opentelemetry-instrumentation-botocore==0.60b1",
    "opentelemetry-instrumentation-celery==0.60b1",
    "opentelemetry-instrumentation-flask==0.60b1",
    "opentelemetry-instrumentation-redis==0.60b1",
    "opentelemetry-instrumentation-urllib3==0.60b1",
]
name = "image_api"
description = "Image resizer API"
version = "0.1.0"

[project.scripts]
image-api = "image_api.web:dev"

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.19.1",
    "boto3-stubs[essential]<2.0.0,>=1.42.58",
    "celery-types<1.0.0,>=0.23.0",
    "types-Flask-Cors<6.0.0,>=5.0.0.20240902",
    "ruff>=0.15.4",
]

[tool.mypy]
strict = true

[tool.ruff]
src = ["image_api"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
